<resources>
    <string name="app_name">Weather Doge</string>
    <string name="action_share">Share</string>
    <string name="action_options">Options</string>
    <string name="share_title">%1$s in %2$s - Weather Doge</string>
    <string name="share_text">%1$s. It\'s %2$s in %3$s.\n\nWow, this shibe is using Weather Doge for Android. https://play.google.com/store/apps/details?id=com.versobit.weatherdoge</string>
    <string name="placeholder_description">wow loading</string>
    <string name="placeholder_temperature">dunno</string>
    <string name="placeholder_location">srsly dunno</string>
    <string name="many_degree">°</string>
    <string name="very_negative">-</string>
    <string name="loading">Loading…</string>
    <string name="wow">wow</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="location_rationale_text">Weather Doge needs your location to provide dynamic weather data and will request that ability in a moment. If you prefer, you may instead provide a static location in the options.</string>
    <string name="location_rationale_negative">Options</string>
    <string name="location_rationale_positive">Continue</string>
    <string name="location_snackbar_text">Location access required</string>
    <string name="location_snackbar_button">Grant</string>
    <string name="pref_app_header">App</string>
    <string name="such_metric_name">Such Metric</string>
    <string name="such_metric_desc">Force metric units in the US, Liberia, and Burma.</string>
    <string name="force_location_name">Constant Location</string>
    <string name="unset">Wow unset</string>
    <string name="pref_weather_source_name">Weather Source</string>
    <string-array name="pref_weather_source_options">
        <item>OpenWeatherMap</item>
        <item>Yahoo! (disabled)</item>
        <item>AccuWeather</item>
    </string-array>
    <string-array name="pref_weather_source_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="very_neue_name">Very Neue</string>
    <string name="very_neue_desc">Use Comic Neue!</string>
    <string name="much_shadow_name">Much Shadow</string>
    <string name="much_shadow_desc">Customize text drop shadow</string>
    <string name="text_on_top_name">Text-on-Top</string>
    <string name="text_on_top_desc">Display doge-isms over weather info</string>
    <string name="pref_disable_particles_name">Such Snow</string>
    <string name="pref_disable_particles_desc">When it snows. It snows.</string>
    <string name="pref_widget_header">Widget</string>
    <string name="pref_widget_refresh_name">Refresh Interval</string>
    <string-array name="pref_widget_refresh_options">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="pref_widget_refresh_values">
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>21600</item>
        <item>43200</item>
        <item>86400</item>
    </string-array>
    <string name="pref_widget_tap_refresh_name">Tap-to-Refresh</string>
    <string name="pref_widget_tap_refresh_desc">Refresh instead of opening the app.</string>
    <string name="pref_widget_show_wowtext_name">Show Doge-isms</string>
    <string name="pref_widget_show_wowtext_desc">Display the \"very weather\" random text.</string>
    <string name="pref_widget_show_date_name">Show Date</string>
    <string name="pref_widget_show_date_desc">Display the date next to the time.</string>
    <string name="pref_widget_bg_fix_name">Background Fix</string>
    <string name="pref_widget_bg_fix_desc">Enable this if the sky does not completely cover the widget even after it has finished loading.</string>
    <string name="about">About</string>
    <string name="made_with_love">Made with ♥ by VersoBit</string>
    <string name="additional_credits_name">Other Shibes</string>
    <string name="additional_credits_desc">Doge loves open source!</string>
    <string name="contribute_name">Contribute</string>
    <string name="contribute_desc">Help support Weather Doge!</string>
    <string name="dialog_about_copyright">Copyright © 2023 VersoBit</string>
    <string name="dialog_about_text1">Crafted by the fine shibes over at VersoBit and our wow-worthy open-source collaborators. &#x1f436;</string>
    <string name="dialog_about_text2">Based on dogeweather.com.</string>
    <string name="dialog_about_privacy">Privacy Policy</string>
    <string name="dialog_about_privacy_url">https://versobit.com/weather-doge-privacy-policy</string>
    <string name="dialog_about_contact">Send us an email!</string>
    <string name="dialog_about_contact_email">apps@versobit.com</string>
    <string name="dialog_about_contact_subject">Weather Doge Inquiry</string>
    <string name="dialog_about_contact_noemail">There is no email app installed.</string>
    <string name="dialog_about_contact_body">
Hey VersoBit,\n
\n
\n
\n
Device and app info:\n
\n
App Version Name: %s\n
App Version Code: %d\n
Flavor: %s\n
Package Name: %s\n
Build Type: %s\n
Debug: %b\n
Android Version: %s\n
Android SDK: %d\n
Device: %s\n
Model: %s\n
Product: %s\n
Manufacturer: %s\n
Brand: %s\n
Report Generated: %s\n
    </string>
    <string name="dialog_contribute_github_title">GitHub</string>
    <string name="dialog_contribute_github_msg">Weather Doge is open-source and on GitHub!</string>
    <string name="dialog_contribute_dogecoin_title">Dogecoin</string>
    <string name="dialog_contribute_dogecoin_msg">We ♥ Dogecoin! Tap to copy our address to your clipboard.</string>
    <string name="dialog_contribute_bitcoin_title">Bitcoin</string>
    <string name="dialog_contribute_bitcoin_msg">No DOGE? Tap to securely donate.</string>
    <string name="addr_versobit">https://versobit.com/</string>
    <string name="addr_github">https://github.com/VersoBit/WeatherDoge</string>
    <string name="geocoder_error_title">Geocoder Error</string>
    <string name="geocoder_error_msg">Oh noes. There\'s a known problem with the Android geocoding service that causes it to stop functioning properly. A reboot usually fixes this problem.</string>
    <string name="geocoder_error_code">No Geocoder is present on this device.</string>
    <string name="error_ensure_location_settings">Set location settings to &quot;Battery Saving&quot; or &quot;High Accuracy&quot; or set location in app settings.</string>
    <string name="dialog_dropshadow_adjectives">Use shadow for doge-isms</string>
    <string name="widget_at">at</string>
    <string name="widget_error_geocoder">Error: Geocoder failed.</string>
    <string name="widget_error_location">Error: Location failed.</string>
    <string name="widget_error_permission">Error: Location permission not granted.</string>
    <string name="widget_error_gms_connect">Error: Google Play Services connection failed.</string>
    <string name="widget_error_unknown">Error: Unknown error.</string>
    <string name="widget_error_no_gms">Error: Google Play Services unavailable.</string>
    <string name="widget_error_action">Error: Unknown action.</string>
    <string name="widget_error_api">Error: API error.</string>
    <string name="widget_error_weather_util">Error: WeatherUtil error.</string>
    <string name="widget_error_location_settings">Error: Set location to &quot;Battery Saving&quot; or &quot;High Accuracy&quot;</string>
    <string name="widget_error_no_background_location">Error: Open app to update your location.</string>
    <string name="widget_notification_permission_title">Location requested</string>
    <string name="widget_notification_permission_body">The Weather Doge widget needs access to your location.</string>
    <string name="notification_group_widgets_name">Widgets</string>
    <string name="notification_channel_widgets_location_name">Location Permission</string>
    <string name="notification_channel_widgets_location_desc">Alerts you if the widget needs access to your location.</string>
    <string name="empty" />
    <string-array name="wows">
        <item>wow</item>
        <item>so wow</item>
    </string-array>
    <string-array name="dogefix">
        <item>such %1$s</item>
        <item>very %1$s</item>
        <item>much %1$s</item>
        <item>so %1$s</item>
    </string-array>
    <string-array name="weather_polarvortex">
        <item>winter</item>
        <item>freeze</item>
        <item>polar vortex</item>
        <item>ridiculous</item>
        <item>hibernate</item>
        <item>climate change</item>
        <item>doom</item>
    </string-array>
    <string-array name="weather_yuck">
        <item>cold</item>
        <item>freeze</item>
        <item>shiver</item>
        <item>ice</item>
        <item>yuck</item>
        <item>climate change</item>
        <item>popsicle</item>
    </string-array>
    <string-array name="weather_notokay">
        <item>icy</item>
        <item>winter</item>
        <item>chill</item>
        <item>crisp</item>
        <item>brrrrr</item>
        <item>cool</item>
        <item>not okay</item>
    </string-array>
    <string-array name="weather_chilly">
        <item>icy</item>
        <item>frost</item>
        <item>numb</item>
        <item>shiver</item>
        <item>brrr</item>
        <item>chilly</item>
        <item>below freezing point</item>
    </string-array>
    <string-array name="weather_concern">
        <item>chilly</item>
        <item>concern</item>
        <item>coat</item>
        <item>frosty</item>
        <item>uh oh</item>
        <item>brrrr</item>
        <item>almost freezing</item>
    </string-array>
    <string-array name="weather_whatever">
        <item>moderate</item>
        <item>mild</item>
        <item>okay</item>
        <item>medium</item>
        <item>cool</item>
        <item>whatever</item>
        <item>brisk</item>
    </string-array>
    <string-array name="weather_warmth">
        <item>heat</item>
        <item>warmth</item>
        <item>climate</item>
        <item>sweating</item>
        <item>balmy</item>
        <item>nice day</item>
        <item>ambient</item>
    </string-array>
    <string-array name="weather_globalwarming">
        <item>boiling</item>
        <item>bake</item>
        <item>melt</item>
        <item>dying</item>
        <item>suffer</item>
        <item>global warming</item>
        <item>tropical heat</item>
    </string-array>
    <string-array name="weather_wow">
        <item>concern</item>
        <item>climate</item>
        <item>degrees</item>
        <item>shrug</item>
        <item>wow</item>
        <item>celsius</item>
        <item>fahrenheit</item>
    </string-array>
    <string-array name="bg_01d">
        <item>clear</item>
        <item>sky</item>
        <item>lovely</item>
        <item>amaze</item>
        <item>wonderful</item>
        <item>sun</item>
        <item>weather</item>
    </string-array>
    <string-array name="bg_01n">
        <item>night</item>
        <item>amaze</item>
        <item>clear</item>
        <item>lovely</item>
        <item>wonderful</item>
        <item>sky</item>
        <item>stars</item>
        <item>moon</item>
        <item>dark</item>
        <item>weather</item>
    </string-array>
    <string-array name="bg_02d">
        <item>cloud</item>
        <item>okay</item>
        <item>cumulus</item>
        <item>amaze</item>
        <item>sky</item>
        <item>weather</item>
    </string-array>
    <string-array name="bg_02n">
        <item>dark</item>
        <item>cumulus</item>
        <item>amaze</item>
        <item>cloud</item>
        <item>star</item>
        <item>space</item>
        <item>after dark</item>
        <item>weather</item>
    </string-array>
</resources>