<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2016 VersoBit

    This file is part of Weather Doge.

    Weather Doge is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Weather Doge is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Weather Doge.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_use_comic_neue"
        android:title="@string/very_neue_name"
        android:defaultValue="false"
        android:summary="@string/very_neue_desc" />
    <Preference android:key="pref_drop_shadow"
        android:title="@string/much_shadow_name"
        android:summary="@string/much_shadow_desc" />
    <CheckBoxPreference android:key="pref_text_on_top"
        android:title="@string/text_on_top_name"
        android:defaultValue="false"
        android:summary="@string/text_on_top_desc" />
    <CheckBoxPreference android:key="pref_enable_particles"
        android:title="@string/pref_disable_particles_name"
        android:defaultValue="true"
        android:summary="@string/pref_disable_particles_desc" />

</PreferenceScreen>
