<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 VersoBit Ltd

    This file is part of Weather Doge.

    Weather Doge is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Weather Doge is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Weather Doge.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:key="pref_about_version"
        android:title="@string/app_name"
        android:summary="@string/made_with_love" />
    <Preference android:key="pref_about_contribute"
        android:title="@string/contribute_name"
        android:summary="@string/contribute_desc" />
    <Preference android:key="pref_about_additional_credits"
        android:title="@string/additional_credits_name"
        android:summary="@string/additional_credits_desc" />

</PreferenceScreen>
