<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 VersoBit Ltd

    This file is part of Weather Doge.

    Weather Doge is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Weather Doge is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Weather Doge.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_force_metric"
        android:title="@string/such_metric_name"
        android:summary="@string/such_metric_desc"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="pref_force_location"
        android:title="@string/force_location_name"
        android:defaultValue=""
        android:summary="@string/unset" />
    <ListPreference
        android:key="pref_weather_source"
        android:title="@string/pref_weather_source_name"
        android:entries="@array/pref_weather_source_options"
        android:entryValues="@array/pref_weather_source_values"
        android:defaultValue="0"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
